--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-next": "15.2.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "supabase": "^2.19.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
